<?xml version="1.0" encoding="UTF-8"?>

<!--        Copyright Alibaba Group Holding Ltd.-->

<!--        Licensed under the Apache License, Version 2.0 (the "License");-->
<!--        you may not use this file except in compliance with the License.-->
<!--        You may obtain a copy of the License at-->

<!--        http://www.apache.org/licenses/LICENSE-2.0-->

<!--        Unless required by applicable law or agreed to in writing, software-->
<!--        distributed under the License is distributed on an "AS IS" BASIS,-->
<!--        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.-->
<!--        See the License for the specific language governing permissions and-->
<!--        limitations under the License.-->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

<!--    Don't modify the groupId, artifactId and version !  -->
<!--    不要修改 groupId, artifactId 以及 version ！ -->
    <groupId>com.alibaba.lindorm.tsdb.contest</groupId>
    <artifactId>lindorm-tsdb-contest-java</artifactId>
    <version>1.0</version>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

<!--    <dependencies>-->
<!--        <dependency>-->
<!--            <groupId>moe.cnkirito.kdio</groupId>-->
<!--            <artifactId>kdio-core</artifactId>-->
<!--            <version>1.0.0</version>-->
<!--            <scope>system</scope>-->
<!--            <systemPath>${project.basedir}/thirdlibs/kdio-core-1.0.0.jar</systemPath>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>net.java.dev.jna</groupId>-->
<!--            <artifactId>jna</artifactId>-->
<!--            <version>5.2.0</version>-->
<!--            <scope>system</scope>-->
<!--            <systemPath>${project.basedir}/thirdlibs/jna-5.2.0.jar</systemPath>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>org.slf4j</groupId>-->
<!--            <artifactId>slf4j-api</artifactId>-->
<!--            <version>1.7.25</version>-->
<!--            <scope>system</scope>-->
<!--            <systemPath>${project.basedir}/thirdlibs/slf4j-api-1.7.25.jar</systemPath>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>org.slf4j</groupId>-->
<!--            <artifactId>slf4j-log4j12</artifactId>-->
<!--            <version>1.7.25</version>-->
<!--            <scope>system</scope>-->
<!--            <systemPath>${project.basedir}/thirdlibs/slf4j-log4j12-1.7.25.jar</systemPath>-->
<!--        </dependency>-->
<!--    </dependencies>-->

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <compilerArgs>
                        <arg>--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>